Bug 225396 - "Mozilla" MUA option is broken
Summary: "Mozilla" MUA option is broken
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-SendByMail (other bugs)
Version First Reported In: 5.6.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-03 16:11 UTC by Mark Purcell
Modified: 2017-06-28 21:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Purcell 2010-02-03 16:11:40 UTC
Version:           1.1.0 (using 4.3.4 (KDE 4.3.4), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.32-trunk-686

Forwarded-From: http://bugs.debian.org/561845

I can confirm this is still the case in kipi-plugins=1.0.0

Mark

----------  Forwarded Message  ----------

Subject: [Pkg-kde-extras] Bug#561845: kipi-plugins: "Mozilla" MUA option is broken
Date: Sunday 20 December 2009
From: Marcus Better <marcus@better.se>
To: Debian Bug Tracking System <maintonly@bugs.debian.org>

Package: kipi-plugins
Version: 0.9.0-1+b1
Severity: minor
Tags: upstream

In the "sendimages" plugin, there is an entry for "Mozilla" in the
list of MUAs. This should probably be removed because I doubt anyone
has a MUA actually called "Mozilla" anymore - witness the fact that
the option is guaranteed to be broken:

                    if (d->settings.emailProgram == EmailSettingsContainer::MOZILLA)
                        prog = QString("mozila");

(sendimages.cpp, line 496-497)

Note spelling of "mozila", I don't think it was ever spelled that way
IIRC.

-- System Information:
Debian Release: squeeze/sid
  APT prefers testing
  APT policy: (990, 'testing'), (500, 'unstable'), (1, 'experimental')
Architecture: amd64 (x86_64)

Kernel: Linux 2.6.31.6-melech (SMP w/2 CPU cores; PREEMPT)
Locale: LANG=sv_SE.UTF-8, LC_CTYPE=sv_SE.UTF-8 (charmap=UTF-8)
Shell: /bin/sh linked to /bin/dash

Versions of packages kipi-plugins depends on:
ii  kdebase-runtime        4:4.3.4-2         runtime components from the offici
ii  kdelibs5               4:4.3.4-1         core libraries for all KDE 4 appli
ii  kdepimlibs5            4:4.3.4-1         core libraries for KDE PIM 4 appli
ii  libc6                  2.10.2-2          GNU C Library: Shared libraries
ii  libexpat1              2.0.1-5           XML parsing C library - runtime li
ii  libgcc1                1:4.4.2-3         GCC support library
ii  libgl1-mesa-glx [libgl 7.7~rc2-1         A free implementation of the OpenG
ii  libglib2.0-0           2.22.3-1          The GLib library of C routines
ii  libglu1-mesa [libglu1] 7.7~rc2-1         The OpenGL utility library (GLU)
ii  libgpod4               0.7.2-2           library to read and write songs an
ii  libgtk2.0-0            2.18.3-1          The GTK+ graphical user interface 
ii  libice6                2:1.0.6-1         X11 Inter-Client Exchange library
ii  libjpeg62              6b-15             The Independent JPEG Group's JPEG 
ii  libkdcraw7             4:4.3.4-1         RAW picture decoding C++ library (
ii  libkexiv2-7            4:4.3.4-1         Qt like interface for the libexiv2
ii  libkipi6               4:4.3.4-1         library for apps that want to use 
ii  libksane0              4:4.3.4-1         scanner library for KDE 4 (runtime
ii  libphonon4             4:4.6.0-1         Qt 4 Phonon module
ii  libpng12-0             1.2.41-1          PNG library - runtime
ii  libqca2                2.0.2-1           libraries for the Qt Cryptographic
ii  libqt4-dbus            4:4.6.0-1         Qt 4 D-Bus module
ii  libqt4-network         4:4.6.0-1         Qt 4 network module
ii  libqt4-opengl          4:4.6.0-1         Qt 4 OpenGL module
ii  libqt4-svg             4:4.6.0-1         Qt 4 SVG module
ii  libqt4-xml             4:4.6.0-1         Qt 4 XML module
ii  libqtcore4             4:4.6.0-1         Qt 4 core module
ii  libqtgui4              4:4.6.0-1         Qt 4 GUI module
ii  libsm6                 2:1.1.1-1         X11 Session Management library
ii  libstdc++6             4.4.2-3           The GNU Standard C++ Library v3
ii  libtiff4               3.9.2-1           Tag Image File Format (TIFF) libra
ii  libx11-6               2:1.3.2-1         X11 client-side library
ii  libxau6                1:1.0.5-1         X11 authorisation library
ii  libxdmcp6              1:1.0.3-1         X11 Display Manager Control Protoc
ii  libxext6               2:1.1.1-1         X11 miscellaneous extension librar
ii  libxft2                2.1.14-1          FreeType-based font drawing librar
ii  libxml2                2.7.6.dfsg-1      GNOME XML library
ii  libxrandr2             2:1.3.0-2         X11 RandR extension library
ii  libxslt1.1             1.1.26-1          XSLT processing library - runtime 
ii  phonon                 4:4.6.0-1         Qt 4 Phonon module metapackage
ii  zlib1g                 1:1.2.3.3.dfsg-15 compression library - runtime

Versions of packages kipi-plugins recommends:
ii  imagemagick                  7:6.5.8.3-1 image manipulation programs
ii  konqueror                    4:4.3.4-1   KDE 4's advanced file manager, web

Versions of packages kipi-plugins suggests:
pn  gallery                       <none>     (no description available)
ii  gimp                          2.6.7-1.1  The GNU Image Manipulation Program
ii  kmail                         4:4.3.4-1  KDE Email client
ii  vorbis-tools                  1.2.0-6    several Ogg Vorbis tools

-- no debconf information
Comment 1 Johannes Wienke 2010-02-03 18:03:08 UTC
SVN commit 1084742 by jwienke:

Removed obsolete and buggy mozilla mail client option.

BUG: 225396

 M  +3 -6      NEWS  
 M  +0 -1      sendimages/emailpage.cpp  
 M  +0 -1      sendimages/emailsettingscontainer.h  
 M  +1 -4      sendimages/sendimages.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1084742