Removed obsolete and buggy mozilla mail client option.

BUG: 225396

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=1084742